# two_auction_mechanism_generalized

./: .gitignore  Makefile  Makefile.am  README.md  config.h  config.h.in~  configure.ac  libtool
etc/: Makefile  Makefile.am  quadrature.tar.xz
include/: Error.h  TwoAuctionMechanismGeneralized.h
src/: Error.cpp  Makefile  Makefile.am  TwoAuctionMechanismGeneralized.cpp  TwoAuctionMechanismGeneralizedWrapper.cpp
src/.deps/: libtwoauctiongen_la-Error.Plo  libtwoauctiongen_la-TwoAuctionMechanismGeneralized.Plo  test_runner-Error.Po  test_runner-TwoAuctionMechanismGeneralized.Po
src/.libs/: libtwoauctiongen.so.0  libtwoauctiongen.so.0.0.0
test/: Makefile  Makefile.am  TwoAuctionMechanismGeneralized_test.cpp  test_runner  test_runner.cpp
test/.deps/: test_runner-TwoAuctionMechanismGeneralized_test.Po  test_runner-test_runner.Po
